gccida/c1/clear_emit_caches
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_emit_caches/src/emit-rtl.c:5094:12: error: expected expression
*( _OWORD *)&sequence_result[2] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_emit_caches/src/emit-rtl.c:5094:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&sequence_result[2] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_emit_caches/src/emit-rtl.c:5095:12: error: expected expression
*( _OWORD *)sequence_result = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_emit_caches/src/emit-rtl.c:5095:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)sequence_result = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_emit_caches/src/obj/emit-rtl.o] Error 1
